# born

./: .env  .gitignore  .ignore  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  README.md
examples/axum_example/: Cargo.toml
examples/axum_example/src/: main.rs
examples/axum_example/src/schemas/: user.rs
examples/blog/: .gitignore  Cargo.toml  README.md
examples/blog/src/: main.rs
examples/blog/src/api/: blog.rs  dev_to.rs  mod.rs
examples/blog/src/handlers/: blog.rs
examples/blog/src/schemas/: dev_to.rs  mod.rs  portfolio.rs  user.rs
examples/blog/src/templates/: blog.rs  mod.rs
examples/blog/static/: post.css  test.txt
src/: lib.rs  nested_macro.rs
src/enum/: private.rs  public.rs
src/struct/: private.rs  public.rs
templates/: base.html  index.html  post.html  posts.html
tests/: macrotest.rs  mod.rs  trybuild.rs
tests/expand/: private_enum.expanded.rs  private_enum.rs  private_struct.expanded.rs  private_struct.rs  public_enum.expanded.rs  public_enum.rs  public_struct_private_field.expanded.rs  public_struct_private_field.rs  public_struct_public_and_private_fields.expanded.rs  public_struct_public_and_private_fields.rs  public_struct_public_field.expanded.rs  public_struct_public_field.rs  public_struct_public_fields.expanded.rs  public_struct_public_fields_derive.expanded.rs  public_struct_public_fields_derive.rs  public_struct_public_fields_derive_serde.expanded.rs  public_struct_public_fields_derive_serde.rs
tests/fail/: private_enum.rs  private_struct.rs  public_enum.rs  public_struct.rs
tests/pass/: mod.rs  private_enum.rs  private_enum_serde.rs  private_struct.rs  private_struct_serde.rs  public_enum.rs  public_enum_serde.rs  public_struct.rs  public_struct_not_pub_field.rs  public_struct_serde.rs  rename.rs
tests/pass/readme/: enum.rs  mod.rs  struct.rs
