[package]
name = "born"
version = "0.0.1"
# It has to be short.
authors = ["Steadylearner <steadylearnerdev@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Reuse fields from Struct and Enum definition with functional macros."
repository = "https://github.com/steadylearner/born"
documentation = "https://docs.rs/born"
keywords = ["struct", "enum", "macro", "born", "inherit", "reuse", "duplication", "steadylearner"]
# error: api errors (status 200 OK): invalid upload request: invalid length 6, expected at most 5 categories per crate at line 1 column 7931
# https://crates.io/category_slugs, Should have used only what are inside the list.
categories = ["no-std", "rust-patterns"]
readme = "README.md" # It is used at https://crates.io/crates/born
exclude = [
    "*.py",
    ".ignore",
    ".gitignore",
    "tests/",
    "*.json", # Cannot exclude .cargo_vcs_info.json, .rutc_info.json etc
    ".cargo_vcs_info.json", # Cannot exclude .cargo_vcs_info.json
    ".travis.yml",
    "CHANGELOG.md",
    "*.png",
]

[dev-dependencies]
# Test
macrotest = "1.0.5"
trybuild = "1.0.35"
doc-comment = "0.3.3"
# New feature to use born with serde derive macro.
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
# examples
reqwest = { version = "0.11.17", features = ["json"] }
axum = "0.6.18"
tokio = { version = "1.28.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
dotenvy = "0.15.7"
dotenvy_macro = "0.15.7"
lazy_static = "1.4.0"
chrono = "0.4.24"
url = { version = "2.3.1", features = ["serde"] }
async_once = "0.2.6"
tower-http = { version = "0.4.0", features=["full"] }
askama = { version = "0.12.0", features=["markdown"] }
uuid = { version = "1.3.2", features=["v4", "serde"] }
# futures = "0.3.28"


# Use this to test an example at examples folder.
# $cargo run --example <example_name>

[[example]]
name = "axum_example"
path = "examples/axum_example/src/main.rs"

[[example]]
name = "blog"
path = "examples/blog/src/main.rs"

