[package]
name = "blog"
version = "0.1.0"
edition = "2021"

[dependencies]
born = { path = "../" }
# born = { git = "https://github.com/steadylearner/born", branch = "master" }

# These below should be included in the main Cargo.toml for examples test to work.
axum = "0.6.18"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
reqwest = { version = "0.11.17", features = ["json"] }
tokio = { version = "1.28.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
dotenvy = "0.15.7"
dotenvy_macro = "0.15.7"
lazy_static = "1.4.0"
chrono = "0.4.24"
url = { version = "2.3.1", features = ["serde"] }
async_once = "0.2.6"
tower-http = { version = "0.4.0", features=["full"] }
askama = { version = "0.12.0", features=["markdown"] }
# futures = "0.3.28"